# cpp-copy-move-code

hello/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
